added a cat picture

--- a/studentBio.html
+++ b/studentBio.html
@@ -17,6 +17,9 @@
 
 		<p>Originally from El Paso, I've lived in the Dallas area for about 4 years, and I should have moved here a long time ago. I work in Travel Management, but my real passions include fiddling with computer hardware, front-end code, and getting into adventures with my dogs. I've been married to my lovely wife Bella for a little over a year now. We got married on Leap Day 2016, so I'll only have to buy an anniversary gift every 4 years. I love to travel; mainly to the beach. And, I occasionally binge watch NetFlix shows; lately, it's been "Better Call Saul"</p>
 
+		<p>This is phillip messing around</p>
+		<img height="200" width="200" src="https://www.royalcanin.com/~/media/Royal-Canin/Product-Categories/cat-adult-landing-hero.ashx">
+
 		<h2>Contact Info</h2>
 
 		<ul>
